Fix: Responsive styles and dark mode colors

--- a/src/components/Modals/EditProfileModal/EditProfileModal.scss
+++ b/src/components/Modals/EditProfileModal/EditProfileModal.scss
@@ -1,6 +1,9 @@
 $bg-save: #272c30;
 $text-save: #fff;
 
+$text-muted: #536371;
+$text-muted-dark: #8a98a5;
+
 $bg-save-dark: #d7dbdc;
 $text-save-dark: #000;
 
@@ -18,6 +21,14 @@ $text-save-dark: #000;
 
 .text-default-dark {
   color: #fff !important;
+}
+
+.text-muted {
+  color: $text-muted !important;
+}
+
+.text-muted-dark {
+  color: $text-muted-dark !important;
 }
 
 .form-control::-webkit-input-placeholder {
